--- a/Public/Styles/custom-styles.css
+++ b/Public/Styles/custom-styles.css
@@ -1,7 +1,7 @@
 html,
 body{
     height: auto;
-    background-color: #5050ac;
+    background-color: #282838;
     margin: 0;
 }
 
@@ -24,6 +24,7 @@ body{
 .btn-nav-system-builder{
     grid-column: 1;
     grid-row: 2;
+    display: grid;
     float: right;
     margin: auto;
     margin-left: 20%;
@@ -35,6 +36,7 @@ body{
 .btn-nav-featured-builds{
     grid-column: 2;
     grid-row: 2;
+    display: grid;
     float: right;
     margin: auto;
     margin-left: 20%;
@@ -43,9 +45,10 @@ body{
     border: none;
 }
 
-.btn-nav-other{
+.btn-nav-home{
     grid-column: 3;
     grid-row: 2;
+    display: grid;
     float: right;
     margin: auto;
     margin-left: 20%;
@@ -54,38 +57,139 @@ body{
     border: none;
 }
 
-.search-placeholder{
+.search-container{
+    grid-column: 4;
+    grid-row: 2;
+    display: grid;
+    float: right;
+    float: left;
+    margin: auto;
+    margin-left: 20%;
+    padding: 7px 45px 7px 45px;
+    background: #2a2a2e;
+    font-size: 17px;
+    border: none;
+  }
+
+
+.search-button{
     grid-column: 5;
     grid-row: 2;
+    display: grid;
     float: left;
     margin: auto;
     margin-left: 10%;
+    padding: 7px 15px 7px 15px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.5s;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+/* //https://html-online.com/articles/gradient-background-buttons-css-html/  for later gradient transition bc currently iz broke*/
+
+.search-button-1{
+    background-image: linear-gradient(to right, #7b1bc9 0%, #dda989 51%, #2503be 100%);
+}
+
+.search-button-1:hover{
+    background-position: right center;
+}
+
+
+.welcome-grid{
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: 38% 1fr;
+    grid-template-rows: 500px;
+    background-image: url('../Images/PCBuild4.jpg');
+    background-size: 1520px;
+    background-repeat: no-repeat;
+    width: auto;
+    height: auto;
+    border: none;
+}
+
+.welcome-message{
+    margin-left: 30px;
+    margin-top: 30px;
+    font-weight: lighter;
+    color: #ffffff;
+}
+
+.welcome-text-left{
+    grid-column: 1;
+    display: grid;
+    padding: 25px 5% 25px 5%;
+}
+
+.home-featured-grid{
+    grid-row: 3;
+    display: grid;
+    grid-template-columns: 38% 1fr;
+    grid-template-rows: 500px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+
+.home-featured-header{
+    grid-column: 1;
+    grid-row: 1;
+    display: grid;
+    font-weight: lighter;
+    color: #ffffff;
+    text-align: center;
+
+}  
+
+.home-featured-desc{
+    grid-column: 1;
+    grid-row: 2;
+    display: grid;
+    font-weight: lighter;
+    color: #ffffff;
+    text-align: center;
+    float: right;
+    margin: auto;
     padding: 7px 45px 7px 45px;
-    font-weight: bold;
+    font-weight: lighter;
+    border: none;
+}
+
+.btn-home-featured{
+    grid-column: 1;
+    grid-row: 2;
+    display: grid;
+    font-weight: lighter;
+    color: #ffffff;
+    text-align: center;
+    float: right;
+    margin: auto;
+    padding: 7px 45px 7px 45px;
+    font-weight: lighter;
     border: none;
 }
 
 
-.our-info-grid{
-    grid-row: 2;
+.home-featured-img{
+    grid-column: 2;
+    grid-row: 1, 2;
     display: grid;
-    grid-template-columns: 38% 1fr;
-    grid-template-rows: 100px 250px;
-    font-weight: lighter;
+    background-image: url('../Images/PCBuild.jpg');
+    background-size: 750px;
+    width: auto;
+    height: auto;
+    border: none;
+    margin-right: 50px;
+    margin-left: 50px;
+    background-repeat: no-repeat;
 }
 
-.info-text-left{
-    grid-column: 1;
-    padding: 25px 5% 25px 5%;
-    background-image: url('../Images/PCBuild4.png');
-}
-
-
-.page-footer-grid{
-    grid-row: 5;
+.footer-grid{
+    grid-row: 4;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
     background-color: #2a2a2e;
     height: auto;
     padding-top: 15x;
@@ -93,39 +197,30 @@ body{
     border-top: 1px solid gray
 }
 
-.footer-left,
-.footer-center,
-.footer-right{
+.footer-top-contact {
+    grid-column: 2;
+    grid-row: 1;
+    display: grid;
+    padding-top: 7px;
+    color: #ffffff;
+    text-align: center;
+}
+
+.footer-top-other {
     grid-column: 1;
     grid-row: 1;
-}
-
-.footer-center{
-    grid-column: 2
-}
-
-.footer-right{
-    grid-column: 3;
+    display: grid;
+    padding-top: 7px;
+    color: #ffffff;
     text-align: center;
-    margin-right: 10%;
-    margin-top: 220px;
 }
 
-.btn-contact-us{
-    grid-column: 2;
-    background-color: #3B3A6D;
-    margin: auto;
-    padding: 10px 50px 10px 50px;
-    font-weight: bold;
-    border: none;
-}
-
-.form-contact{
-    grid-column: 2;
-    width: 100%;
-}
-
-.form-contact > textarea,
-.form-row{
-    margin-bottom: 15px;
+.footer-bottom{
+    grid-row: 2;
+    grid-column: 1, 2;
+    display: grid;
+    padding-bottom: 10px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 15px;
 }
