--- a/View/Public/Styles/corn-puter.css
+++ b/View/Public/Styles/corn-puter.css
@@ -19,10 +19,11 @@ body{
     background-color: #2a2a2e;
     position: sticky;
     top: 0px;
+    z-index: 9999;
 }
 
 .btn-nav-system-builder{
-    grid-column: 1;
+    grid-column: 2;
     grid-row: 2;
     display: grid;
     float: right;
@@ -34,7 +35,7 @@ body{
 }
 
 .btn-nav-featured-builds{
-    grid-column: 2;
+    grid-column: 3;
     grid-row: 2;
     display: grid;
     float: right;
@@ -46,7 +47,7 @@ body{
 }
 
 .btn-nav-home{
-    grid-column: 3;
+    grid-column: 1;
     grid-row: 2;
     display: grid;
     float: right;
@@ -100,28 +101,41 @@ body{
 .welcome-grid{
     grid-row: 2;
     display: grid;
-    grid-template-columns: 38% 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 500px;
-    background-image: url('../Images/PCBuild4.jpg');
-    background-size: 1520px;
-    background-repeat: no-repeat;
     width: auto;
     height: auto;
     border: none;
 }
 
+.welcome-background{
+    display: grid;
+    grid-row: 1;
+    background-image: url('../Images/PCBuild5.jpg');
+    background-position: -350px -600px;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+
+}
+
 .welcome-message{
-    margin-left: 30px;
-    margin-top: 30px;
+    padding-left: 30px;
+    padding-top: 30px;
     font-weight: lighter;
     color: #ffffff;
 }
 
-.welcome-text-left{
-    grid-column: 1;
-    display: grid;
-    padding: 25px 5% 25px 5%;
+/* WORK IN PROGRESS */
+.box-background{
+    border:solid ;
+    border-color: #2a2a2e;
+    padding:1vw ;
+    position: absolute;
+    background-color: rgba(22, 16, 16, 0.5);
+
 }
+
 
 .home-featured-grid{
     grid-row: 3;
@@ -139,7 +153,6 @@ body{
     font-weight: lighter;
     color: #ffffff;
     text-align: center;
-
 }  
 
 .home-featured-desc{
@@ -185,16 +198,45 @@ body{
     background-repeat: no-repeat;
 }
 
+.featured-builds-grid-one{
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: 38% 1fr;
+    grid-template-rows: 500px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+
+.featured-builds-grid-two{
+    grid-row: 3;
+    display: grid;
+    grid-template-columns: 1fr 38%;
+    grid-template-rows: 500px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+
+
 .footer-grid{
     grid-row: 4;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     background-color: #2a2a2e;
     height: auto;
+    width: 100%;
     padding-top: 15x;
     padding-bottom: 15x;
-    border-top: 1px solid gray
+    border-top: 1px solid gray;
+    position: sticky;
+    bottom: 0px;
+}
+
+.footer-top{
+    grid-row: 1;
+    grid-template-columns: 1fr 1fr;
+    display: grid;
+    height: auto;
 }
 
 .footer-top-contact {
@@ -217,7 +259,7 @@ body{
 
 .footer-bottom{
     grid-row: 2;
-    grid-column: 1, 2;
+    grid-column: 1;
     display: grid;
     padding-bottom: 10px;
     color: #ffffff;
