--- a/View/Public/Styles/corn-puter.scss
+++ b/View/Public/Styles/corn-puter.scss
@@ -233,7 +233,7 @@ body{
         margin-top: 50px;
     }
 
-    .pizza-time-person{
+    .featured-builds-card{
         display: grid;  
         grid-template-columns: auto auto;
         grid-template-rows: auto;
