--- a/View/Public/Styles/corn-puter.css
+++ b/View/Public/Styles/corn-puter.css
@@ -14,6 +14,7 @@ body {
       grid-template-rows: auto auto auto auto;
 }
 
+/* navbar */
 .navbar-grid {
   -ms-grid-row: 1;
   grid-row: 1;
@@ -121,6 +122,8 @@ body {
   background-position: right center;
 }
 
+/* navbar */
+/* home */
 .welcome-grid {
   -ms-grid-row: 2;
   grid-row: 2;
@@ -240,32 +243,145 @@ body {
   background-repeat: no-repeat;
 }
 
-.featured-builds-grid-one {
+/* home */
+/* featured-builds */
+.featured-welcome-grid {
+  -ms-grid-column: 1;
+  grid-column: 1;
   -ms-grid-row: 2;
   grid-row: 2;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 38% 1fr;
-      grid-template-columns: 38% 1fr;
-  -ms-grid-rows: 500px;
-      grid-template-rows: 500px;
-  margin-top: 70px;
-  margin-bottom: 70px;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  width: auto;
+  height: auto;
+  border-bottom: 1px solid gray;
 }
 
-.featured-builds-grid-two {
+.featured-welcome {
+  display: -ms-grid;
+  display: grid;
+  padding-top: 30px;
+  color: #ffffff;
+  font-weight: lighter;
+}
+
+.featured-builds-grid {
+  -ms-grid-column: 1;
+  grid-column: 1;
   -ms-grid-row: 3;
   grid-row: 3;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 38%;
-      grid-template-columns: 1fr 38%;
-  -ms-grid-rows: 500px;
-      grid-template-rows: 500px;
-  margin-top: 70px;
-  margin-bottom: 70px;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: (minmax(0, auto))[auto-fill];
+      grid-template-rows: repeat(auto-fill, minmax(0, auto));
+  margin-top: 50px;
 }
 
+.featured-builds-card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 200px 200px;
+      grid-template-columns: 200px 200px;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  padding: 6px 6px 6px 6px;
+}
+
+.featured-builds-info {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  padding: 25px 0 0 5px;
+}
+
+.featured-builds-image {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  margin-left: 5px;
+  margin-top: 20px;
+  width: auto;
+  height: auto;
+  border: none;
+  margin-right: 50px;
+  margin-left: 50px;
+  background-repeat: no-repeat;
+}
+
+.featured-builds-btn {
+  font-weight: lighter;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+  padding: 7px 45px 7px 45px;
+  font-weight: lighter;
+  border: none;
+}
+
+/* featured-builds */
+/* newsletter */
+.newsletter-open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+/* newsletter */
+/* footer */
 .footer-grid {
   -ms-grid-row: 4;
   grid-row: 4;
@@ -331,4 +447,6 @@ body {
   text-align: center;
   font-size: 15px;
 }
+
+/* footer */
 /*# sourceMappingURL=corn-puter.css.map */
