--- a/View/Public/Styles/corn-puter.css
+++ b/View/Public/Styles/corn-puter.css
@@ -278,38 +278,38 @@ body {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: (minmax(0, auto))[auto-fill];
-      grid-template-rows: repeat(auto-fill, minmax(0, auto));
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
   margin-top: 50px;
 }
 
 .featured-builds-card {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 200px 200px;
-      grid-template-columns: 200px 200px;
+  -ms-grid-columns: 38% 1fr;
+      grid-template-columns: 38% 1fr;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   padding: 6px 6px 6px 6px;
+  border-top: solid gray 1px;
+  border-bottom: solid gray 1px;
+  margin: 30px;
 }
 
 .featured-builds-info {
   -ms-grid-column: 1;
   grid-column: 1;
-  padding: 25px 0 0 5px;
+  padding: 200px 0px 0px 115px;
+  text-align: center;
 }
 
 .featured-builds-image {
   -ms-grid-column: 2;
   grid-column: 2;
-  margin-left: 5px;
-  margin-top: 20px;
   width: auto;
   height: auto;
-  border: none;
-  margin-right: 50px;
-  margin-left: 50px;
-  background-repeat: no-repeat;
+  float: right;
+  text-align: center;
 }
 
 .featured-builds-btn {
