--- a/View/Public/Styles/corn-puter.scss
+++ b/View/Public/Styles/corn-puter.scss
@@ -279,19 +279,29 @@ body{
         cursor: pointer;
         opacity: 0.8;
         position: fixed;
-        bottom: 23px;
-        right: 28px;
+        bottom: 15px;
+        right: 15px;
         width: 280px;
     }
 
-    .form-container {
+    /* The popup newsletter - hidden by default */
+    .newsletter-popup {
+        display: none;
+        position: fixed;
+        bottom: 0;
+        right: 15px;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+    }
+
+    .newsletter-container {
         max-width: 300px;
         padding: 10px;
         background-color: white;
       }
       
       /* Full-width input fields */
-      .form-container input[type=text], .form-container input[type=password] {
+      .newsletter-container input[type=text] {
         width: 100%;
         padding: 15px;
         margin: 5px 0 22px 0;
@@ -300,13 +310,13 @@ body{
       }
       
       /* When the inputs get focus, do something */
-      .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+      .newsletter-container input[type=text]:focus {
         background-color: #ddd;
         outline: none;
       }
       
       /* Set a style for the submit/login button */
-      .form-container .btn {
+      .newsletter-container .btn {
         background-color: #4CAF50;
         color: white;
         padding: 16px 20px;
@@ -318,12 +328,12 @@ body{
       }
       
       /* Add a red background color to the cancel button */
-      .form-container .cancel {
+      .newsletter-container .cancel {
         background-color: red;
       }
       
       /* Add some hover effects to buttons */
-      .form-container .btn:hover, .open-button:hover {
+      .newsletter-container .btn:hover, .open-button:hover {
         opacity: 1;
       }
 
